feat(concurrency): Add simple thread/process creation and basic single/multi-thread examples
- Add 00_single_thread_basics.cpp (single-thread introspection + timed work)
- Add 00_multi_thread_basics.cpp (refactored named worker; split work across threads)
- Add 06_thread_create_basics.cpp (function, lambda, args, join vs detach)
- Add 07_process_create_basics.cpp (fork + execlp + waitpid minimal flow)
- Update README with basic definitions + minimal syntax for thread/process
- Update README links; add Quick Syntax section
- Set makefile default to 00_single_thread_basics.cpp for easier start

No changes outside concurrency/ are included.

--- a/concurrency/makefile
+++ b/concurrency/makefile
@@ -6,7 +6,8 @@ CXXFLAGS = -std=c++17 -Wall -Wextra -pthread
 TARGET = program
 
 # Default file if not specified
-FILE ?= 01_process_vs_thread.cpp
+# Start with the simplest example by default
+FILE ?= 00_single_thread_basics.cpp
 
 all: build
 
