--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.so
 *.dylib
 
+
 # C++ build directories
 build/
 bin/
@@ -19,6 +20,7 @@ obj/
 *.swo
 *~
 .DS_Store
+*makefile
 
 # Java compiled files
 *.class
